--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@heroicons/react": "^2.1.5",
     "axios": "^1.7.4",
+    "dotenv": "^16.4.5",
     "heroicons": "^2.1.5",
     "jwt-decode": "^4.0.0",
     "next": "14.2.5",
