--- a/.env
+++ b/.env
@@ -1,6 +1,5 @@
 
 
-# BACKEND_URL=http://localhost:5000/api/v1
+# BACKEND_URL=http://localhost:5000
+BACKEND_URL=https://asian-server.vercel.app
 
-BACKEND_URL=https://asian-server.vercel.app/api/v1
-# NEXT_PUBLIC_BACKEND_URL=https://asian-server.vercel.app
