--- a/.env
+++ b/.env
@@ -1,5 +1,4 @@
 
-
 # BACKEND_URL=http://localhost:5000
-BACKEND_URL=https://asian-server.vercel.app
+# BACKEND_URL=https://asian-server.vercel.app
 
